Sync all content

--- a/content/resources/2-18s15-th.md
+++ b/content/resources/2-18s15-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: 'This course asks if it is possible to program cells to chase pathogens,
   kill cancer cells, or transform waste into energy? Courtesy of The Journal of Cell
   Biology. License: CC BY-NC-SA.'
-file: /media/courses/2-18-biomolecular-feedback-systems-spring-2015/6fbcc1a75004ec48578e6b36084a7bcc_2-18s15-th.jpg
+file: /courses/2-18-biomolecular-feedback-systems-spring-2015/6fbcc1a75004ec48578e6b36084a7bcc_2-18s15-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'This course asks if it is possible to program cells to chase pathogens,
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 2-18s15-th.jpg
 uid: 6fbcc1a7-5004-ec48-578e-6b36084a7bcc
 ---
+This course asks if it is possible to program cells to chase pathogens, kill cancer cells, or transform waste into energy? Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA.
+
