--- a/content/resources/2-18s15.md
+++ b/content/resources/2-18s15.md
@@ -3,7 +3,7 @@ content_type: resource
 description: "This course asks if it is possible to program cells to chase pathogens,\
   \ kill cancer cells, or transform waste into energy? Courtesy of The Journal of\
   \ Cell Biology. License: CC BY-NC-SA. \r\n"
-file: /media/courses/2-18-biomolecular-feedback-systems-spring-2015/f3c959d8418d34cddbc35a0f520ba738_2-18s15.jpg
+file: /courses/2-18-biomolecular-feedback-systems-spring-2015/f3c959d8418d34cddbc35a0f520ba738_2-18s15.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'This course asks if it is possible to program cells to chase pathogens,
@@ -18,3 +18,6 @@ resourcetype: Image
 title: 2-18s15.jpg
 uid: f3c959d8-418d-34cd-dbc3-5a0f520ba738
 ---
+This course asks if it is possible to program cells to chase pathogens, kill cancer cells, or transform waste into energy? Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA. 
+
+
