Sync all content

--- a/content/resources/2-18s15-th.md
+++ b/content/resources/2-18s15-th.md
@@ -13,10 +13,10 @@ image_metadata:
   credit: 'Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA.'
   image-alt: A photograph of a cell, colored by fluorescence.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-18s15-th.jpg
 uid: 6fbcc1a7-5004-ec48-578e-6b36084a7bcc
 ---
 This course asks if it is possible to program cells to chase pathogens, kill cancer cells, or transform waste into energy? Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA.
-
