--- a/content/resources/2-18s15.md
+++ b/content/resources/2-18s15.md
@@ -13,11 +13,10 @@ image_metadata:
   credit: 'Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA.'
   image-alt: A photograph of a cell, colored by fluorescence.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-18s15.jpg
 uid: f3c959d8-418d-34cd-dbc3-5a0f520ba738
 ---
 This course asks if it is possible to program cells to chase pathogens, kill cancer cells, or transform waste into energy? Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA. 
-
-
