--- a/content/resources/2-18s15-th.md
+++ b/content/resources/2-18s15-th.md
@@ -4,12 +4,13 @@ description: 'This course asks if it is possible to program cells to chase patho
   kill cancer cells, or transform waste into energy? Courtesy of The Journal of Cell
   Biology. License: CC BY-NC-SA.'
 file: /courses/2-18-biomolecular-feedback-systems-spring-2015/6fbcc1a75004ec48578e6b36084a7bcc_2-18s15-th.jpg
+file_size: 12208
 file_type: image/jpeg
 image_metadata:
   caption: 'This course asks if it is possible to program cells to chase pathogens,
-    kill cancer cells, or transform waste into energy? (Courtesy of [The Journal of
-    Cell Biology](https://www.flickr.com/photos/thejcb/21104776122/). License: CC
-    BY-NC-SA.)'
+    kill cancer cells, or transform waste into energy? (Courtesy of {{% resource_link
+    "e04a83df-0c4b-4799-9cad-b87ee8e9aca8" "The Journal of Cell Biology" %}}. License:
+    CC BY-NC-SA.)'
   credit: 'Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA.'
   image-alt: A photograph of a cell, colored by fluorescence.
 learning_resource_types: []
