Sync all content

--- a/content/resources/2-18s15.md
+++ b/content/resources/2-18s15.md
@@ -8,9 +8,9 @@ file_size: 127841
 file_type: image/jpeg
 image_metadata:
   caption: 'This course asks if it is possible to program cells to chase pathogens,
-    kill cancer cells, or transform waste into energy? (Courtesy of [The Journal of
-    Cell Biology](https://www.flickr.com/photos/thejcb/21104776122/). License: CC
-    BY-NC-SA.)'
+    kill cancer cells, or transform waste into energy? (Courtesy of {{% resource_link
+    "1d7f8d51-bffe-443e-9679-4bfc03e009ed" "The Journal of Cell Biology" %}}. License:
+    CC BY-NC-SA.)'
   credit: 'Courtesy of The Journal of Cell Biology. License: CC BY-NC-SA.'
   image-alt: A photograph of a cell, colored by fluorescence.
 learning_resource_types: []
